--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np;\n",
-    "import pandas as pd;\n",
-    "import matplotlib.pyplot as plt;\n",
-    "import seaborn as sns;\n"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n"
    ]
   },
   {
@@ -20,6 +23,153 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Screen size</th>\n",
+       "      <th>Screen type</th>\n",
+       "      <th>Chip</th>\n",
+       "      <th>RAM</th>\n",
+       "      <th>ROM</th>\n",
+       "      <th>Batery</th>\n",
+       "      <th>OS</th>\n",
+       "      <th>Screen resolution</th>\n",
+       "      <th>Mobile network</th>\n",
+       "      <th>Camera count</th>\n",
+       "      <th>Camera max MP</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.467420</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.855526</td>\n",
+       "      <td>-0.040526</td>\n",
+       "      <td>-0.418828</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.592000e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.278035</td>\n",
+       "      <td>-0.520814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.781956</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.368879</td>\n",
+       "      <td>1.952557</td>\n",
+       "      <td>0.815510</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.254336e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.980678</td>\n",
+       "      <td>1.274604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.467420</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.657828</td>\n",
+       "      <td>-0.897009</td>\n",
+       "      <td>0.815510</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.592000e+06</td>\n",
+       "      <td>-1.664943</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.624966</td>\n",
+       "      <td>-0.761271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-2.372521</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.657828</td>\n",
+       "      <td>-0.897009</td>\n",
+       "      <td>-1.860525</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.527200e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1.147649</td>\n",
+       "      <td>0.152468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.444264</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.855526</td>\n",
+       "      <td>1.672439</td>\n",
+       "      <td>0.815510</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.275550e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.043276</td>\n",
+       "      <td>-0.128066</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Screen size  Screen type  Chip       RAM       ROM    Batery  OS  \\\n",
+       "0    -0.467420            1     2  0.855526 -0.040526 -0.418828   0   \n",
+       "1     1.781956            1     3  2.368879  1.952557  0.815510   0   \n",
+       "2    -0.467420            0     2 -0.657828 -0.897009  0.815510   0   \n",
+       "3    -2.372521            1     0 -0.657828 -0.897009 -1.860525   1   \n",
+       "4     1.444264            1     0  0.855526  1.672439  0.815510   1   \n",
+       "\n",
+       "   Screen resolution  Mobile network  Camera count  Camera max MP     Price  \n",
+       "0       2.592000e+06        0.600621             4       1.278035 -0.520814  \n",
+       "1       4.254336e+06        0.600621             5       2.980678  1.274604  \n",
+       "2       2.592000e+06       -1.664943             5       0.624966 -0.761271  \n",
+       "3       2.527200e+06        0.600621             2      -1.147649  0.152468  \n",
+       "4       2.275550e+06        0.600621             0       0.043276 -0.128066  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_train = pd.read_csv('train_test_data/train_data.csv')\n",
+    "data_test = pd.read_csv('train_test_data/test_data.csv')\n",
+    "data_train.head()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -27,10 +177,316 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1241 entries, 0 to 1240\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Screen size        1241 non-null   float64\n",
+      " 1   Screen type        1241 non-null   int64  \n",
+      " 2   Chip               1241 non-null   int64  \n",
+      " 3   RAM                1241 non-null   float64\n",
+      " 4   ROM                1241 non-null   float64\n",
+      " 5   Batery             1241 non-null   float64\n",
+      " 6   OS                 1241 non-null   int64  \n",
+      " 7   Screen resolution  1241 non-null   float64\n",
+      " 8   Mobile network     1241 non-null   float64\n",
+      " 9   Camera count       1241 non-null   int64  \n",
+      " 10  Camera max MP      1241 non-null   float64\n",
+      " 11  Price              1241 non-null   float64\n",
+      "dtypes: float64(8), int64(4)\n",
+      "memory usage: 116.5 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_train.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Split Data"
+    "### Modeling Train Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Screen size</th>\n",
+       "      <th>Screen type</th>\n",
+       "      <th>Chip</th>\n",
+       "      <th>RAM</th>\n",
+       "      <th>ROM</th>\n",
+       "      <th>Batery</th>\n",
+       "      <th>OS</th>\n",
+       "      <th>Screen resolution</th>\n",
+       "      <th>Mobile network</th>\n",
+       "      <th>Camera count</th>\n",
+       "      <th>Camera max MP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.467420</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.855526</td>\n",
+       "      <td>-0.040526</td>\n",
+       "      <td>-0.418828</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.592000e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.278035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.781956</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.368879</td>\n",
+       "      <td>1.952557</td>\n",
+       "      <td>0.815510</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.254336e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.980678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.467420</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.657828</td>\n",
+       "      <td>-0.897009</td>\n",
+       "      <td>0.815510</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.592000e+06</td>\n",
+       "      <td>-1.664943</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.624966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-2.372521</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.657828</td>\n",
+       "      <td>-0.897009</td>\n",
+       "      <td>-1.860525</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.527200e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1.147649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.444264</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.855526</td>\n",
+       "      <td>1.672439</td>\n",
+       "      <td>0.815510</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.275550e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.043276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1236</th>\n",
+       "      <td>0.431185</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.855526</td>\n",
+       "      <td>-0.040526</td>\n",
+       "      <td>-0.078938</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.592000e+06</td>\n",
+       "      <td>-1.664943</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.278035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1237</th>\n",
+       "      <td>-0.467420</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.098849</td>\n",
+       "      <td>1.952557</td>\n",
+       "      <td>-0.254904</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.566952e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1.147649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1238</th>\n",
+       "      <td>-0.467420</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.657828</td>\n",
+       "      <td>-0.897009</td>\n",
+       "      <td>0.815510</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.152000e+06</td>\n",
+       "      <td>-1.664943</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-1.101002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1239</th>\n",
+       "      <td>1.444264</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.855526</td>\n",
+       "      <td>1.672439</td>\n",
+       "      <td>0.457731</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.592000e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.043276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1240</th>\n",
+       "      <td>-0.581893</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.657828</td>\n",
+       "      <td>1.672439</td>\n",
+       "      <td>-1.860525</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.962440e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1.147649</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1241 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Screen size  Screen type  Chip       RAM       ROM    Batery  OS  \\\n",
+       "0       -0.467420            1     2  0.855526 -0.040526 -0.418828   0   \n",
+       "1        1.781956            1     3  2.368879  1.952557  0.815510   0   \n",
+       "2       -0.467420            0     2 -0.657828 -0.897009  0.815510   0   \n",
+       "3       -2.372521            1     0 -0.657828 -0.897009 -1.860525   1   \n",
+       "4        1.444264            1     0  0.855526  1.672439  0.815510   1   \n",
+       "...           ...          ...   ...       ...       ...       ...  ..   \n",
+       "1236     0.431185            1     3  0.855526 -0.040526 -0.078938   0   \n",
+       "1237    -0.467420            1     0  0.098849  1.952557 -0.254904   1   \n",
+       "1238    -0.467420            0     2 -0.657828 -0.897009  0.815510   0   \n",
+       "1239     1.444264            1     1  0.855526  1.672439  0.457731   0   \n",
+       "1240    -0.581893            1     0 -0.657828  1.672439 -1.860525   1   \n",
+       "\n",
+       "      Screen resolution  Mobile network  Camera count  Camera max MP  \n",
+       "0          2.592000e+06        0.600621             4       1.278035  \n",
+       "1          4.254336e+06        0.600621             5       2.980678  \n",
+       "2          2.592000e+06       -1.664943             5       0.624966  \n",
+       "3          2.527200e+06        0.600621             2      -1.147649  \n",
+       "4          2.275550e+06        0.600621             0       0.043276  \n",
+       "...                 ...             ...           ...            ...  \n",
+       "1236       2.592000e+06       -1.664943             5       1.278035  \n",
+       "1237       3.566952e+06        0.600621             2      -1.147649  \n",
+       "1238       1.152000e+06       -1.664943             3      -1.101002  \n",
+       "1239       2.592000e+06        0.600621             0       0.043276  \n",
+       "1240       2.962440e+06        0.600621             2      -1.147649  \n",
+       "\n",
+       "[1241 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train = data_train.drop(['Price'], axis=1)\n",
+    "x_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      -0.520814\n",
+       "1       1.274604\n",
+       "2      -0.761271\n",
+       "3       0.152468\n",
+       "4      -0.128066\n",
+       "          ...   \n",
+       "1236   -0.568905\n",
+       "1237    1.915825\n",
+       "1238   -0.769287\n",
+       "1239    0.794490\n",
+       "1240    0.745597\n",
+       "Name: Price, Length: 1241, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train = data_train['Price']\n",
+    "y_train"
    ]
   },
   {
@@ -39,27 +495,32 @@
    "source": [
     "### Pre-processing Test Data"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.5"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
