--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -12,7 +12,8 @@
     "import seaborn as sns\n",
     "\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "\n"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n"
    ]
   },
   {
@@ -177,6 +178,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data train information"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -215,12 +223,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Modeling Train Data"
+    "- Data train has 1241 records\n",
+    "- No fields are null"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data test information"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 533 entries, 0 to 532\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Screen size        533 non-null    float64\n",
+      " 1   Screen type        533 non-null    int64  \n",
+      " 2   Chip               533 non-null    int64  \n",
+      " 3   RAM                533 non-null    float64\n",
+      " 4   ROM                533 non-null    float64\n",
+      " 5   Batery             533 non-null    float64\n",
+      " 6   OS                 533 non-null    int64  \n",
+      " 7   Screen resolution  533 non-null    float64\n",
+      " 8   Mobile network     533 non-null    float64\n",
+      " 9   Camera count       533 non-null    int64  \n",
+      " 10  Camera max MP      533 non-null    float64\n",
+      " 11  Price              533 non-null    float64\n",
+      "dtypes: float64(8), int64(4)\n",
+      "memory usage: 50.1 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_test.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Data test has 533 records\n",
+    "- No fields are null"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modeling Train Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get x_train and y_train in data_train\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -447,19 +520,19 @@
        "[1241 rows x 11 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_train = data_train.drop(['Price'], axis=1)\n",
+    "x_train = data_train.drop('Price', axis=1)\n",
     "x_train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +552,7 @@
        "Name: Price, Length: 1241, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,8 +566,352 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pre-processing Test Data"
+    "#### Get x_test and y_test in data_test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Screen size</th>\n",
+       "      <th>Screen type</th>\n",
+       "      <th>Chip</th>\n",
+       "      <th>RAM</th>\n",
+       "      <th>ROM</th>\n",
+       "      <th>Batery</th>\n",
+       "      <th>OS</th>\n",
+       "      <th>Screen resolution</th>\n",
+       "      <th>Mobile network</th>\n",
+       "      <th>Camera count</th>\n",
+       "      <th>Camera max MP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.467420</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.855526</td>\n",
+       "      <td>-0.040526</td>\n",
+       "      <td>0.815510</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.275550e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.043276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.444264</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.855526</td>\n",
+       "      <td>-0.040526</td>\n",
+       "      <td>-0.078938</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.275550e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.043276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.581893</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.657828</td>\n",
+       "      <td>-0.040526</td>\n",
+       "      <td>-3.093229</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.962440e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1.147649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.781956</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.368879</td>\n",
+       "      <td>1.672439</td>\n",
+       "      <td>0.815510</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.446720e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.043276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.781956</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.368879</td>\n",
+       "      <td>-0.040526</td>\n",
+       "      <td>0.815510</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.608000e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.330536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>528</th>\n",
+       "      <td>-0.467420</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.098849</td>\n",
+       "      <td>-0.040526</td>\n",
+       "      <td>-0.526162</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.592000e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.278035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>529</th>\n",
+       "      <td>-0.467420</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.002103</td>\n",
+       "      <td>0.242817</td>\n",
+       "      <td>-0.254904</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.275550e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.043276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>530</th>\n",
+       "      <td>1.545571</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.368879</td>\n",
+       "      <td>1.672439</td>\n",
+       "      <td>0.099952</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.608000e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.624966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>531</th>\n",
+       "      <td>-0.467420</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.657828</td>\n",
+       "      <td>-0.040526</td>\n",
+       "      <td>-0.254904</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.527200e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1.147649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>532</th>\n",
+       "      <td>1.781956</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.368879</td>\n",
+       "      <td>-0.040526</td>\n",
+       "      <td>0.815510</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.608000e+06</td>\n",
+       "      <td>0.600621</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.330536</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>533 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Screen size  Screen type  Chip       RAM       ROM    Batery  OS  \\\n",
+       "0      -0.467420            0     2  0.855526 -0.040526  0.815510   0   \n",
+       "1       1.444264            1     1  0.855526 -0.040526 -0.078938   0   \n",
+       "2      -0.581893            1     0 -0.657828 -0.040526 -3.093229   1   \n",
+       "3       1.781956            1     3  2.368879  1.672439  0.815510   0   \n",
+       "4       1.781956            1     0  2.368879 -0.040526  0.815510   1   \n",
+       "..           ...          ...   ...       ...       ...       ...  ..   \n",
+       "528    -0.467420            1     3  0.098849 -0.040526 -0.526162   0   \n",
+       "529    -0.467420            0     0  0.002103  0.242817 -0.254904   1   \n",
+       "530     1.545571            1     0  2.368879  1.672439  0.099952   1   \n",
+       "531    -0.467420            1     0 -0.657828 -0.040526 -0.254904   1   \n",
+       "532     1.781956            1     0  2.368879 -0.040526  0.815510   1   \n",
+       "\n",
+       "     Screen resolution  Mobile network  Camera count  Camera max MP  \n",
+       "0         2.275550e+06        0.600621             0       0.043276  \n",
+       "1         2.275550e+06        0.600621             0       0.043276  \n",
+       "2         2.962440e+06        0.600621             2      -1.147649  \n",
+       "3         4.446720e+06        0.600621             0       0.043276  \n",
+       "4         4.608000e+06        0.600621             5       3.330536  \n",
+       "..                 ...             ...           ...            ...  \n",
+       "528       2.592000e+06        0.600621             4       1.278035  \n",
+       "529       2.275550e+06        0.600621             0       0.043276  \n",
+       "530       4.608000e+06        0.600621             4       0.624966  \n",
+       "531       2.527200e+06        0.600621             2      -1.147649  \n",
+       "532       4.608000e+06        0.600621             5       3.330536  \n",
+       "\n",
+       "[533 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test = data_test.drop(['Price'], axis=1)\n",
+    "x_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     -0.448676\n",
+       "1      0.873841\n",
+       "2      0.360865\n",
+       "3      1.515062\n",
+       "4      0.521170\n",
+       "         ...   \n",
+       "528   -0.448676\n",
+       "529   -0.991309\n",
+       "530    0.713536\n",
+       "531    0.445025\n",
+       "532    0.521170\n",
+       "Name: Price, Length: 533, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test = data_test['Price']\n",
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating and Modeling using Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lrg = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lrg.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08154057322087538"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lrg.score(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating and Modeling using KNN Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
